# MonoRepo

./: CMakeLists.txt  CodeStyle.md  check.py  pyproject.toml  requirements.txt  test.gmake
.githooks/hooks/: pre-commit.sample  pre-push.sample  sendemail-validate.sample  update.sample
.github/workflows/: ci.yml  push.yml
GMake/: CMakeLists.txt  GMakeTypes.cpp  GMakeTypes.h  SimpleASTGMAKE.cpp  SimpleASTGMAKE.h  TokeniserGMAKE.cpp  TokeniserGMAKE.h  Tokens.h  build_dependecy_graph.cpp  file_utils.cpp  file_utils.h  version.md
JetBrainsPlugins/HarpoonForJetbrains/: settings.gradle.kts
JetBrainsPlugins/HarpoonForJetbrains/src/main/kotlin/com/plugin/harpoonforjetbrains/: MyToolWindow.kt
JetBrainsPlugins/TemplateRanking/: build.gradle.kts  settings.gradle.kts
JetBrainsPlugins/TemplateRanking/src/main/kotlin/com/plugin/templteranking/: MyToolWindow.kt
lib/asset_manager/: CMakeLists.txt  asset_manager.cpp  asset_manager.h
lib/cpp_base/: Error.cpp  Error.h  GMAKE_EXCEPTION.cpp  GMAKE_EXCEPTION.h  assert_print.h  string_utils.cpp  string_utils.h
the_code/: CMakeLists.txt  GridPacker.cpp  event_struct.cpp  font_loader.cpp  shader_preprocesing.cpp  stb_treutype.h
the_code/rectangle_packing_utils/RectBinPack/: grid_packer.h
the_ui_tree_build/: FontManager.py  GSGwidget.py  PassSystem.py  Uniform_Registry.py  event_system.py  focus_manager.py  gen image.py  hold_lock.py  input_maneger.py  make image.py  print_wrapper.py  renderer.py  ui_debug.py  ui_manger.py  update_data_manager.py  widget_data.py  work.bat
the_ui_tree_build/assets/shaders/: WidgetDataType.txt  basic_frag.glsl  basic_vert.glsl  fgg.cpp  final_frag.glsl  final_vert.glsl  widget_builder.glsl
the_ui_tree_build/debug/: debug.json  debug_cli.py
the_ui_tree_build/libraries/: event_queue_system.py  setup.py
the_ui_tree_build/libraries/libraries.egg-info/: SOURCES.txt
tooling/glsllangValidator/lib/: GenericCodeGen.lib  MachineIndependent.lib  OSDependent.lib  SPIRV.lib  glslang-default-resource-limits.lib
tooling/mirror/: MirrorMain.py  mirror.json
